# transpiler

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .vimspector.json  CMakeLists.txt  Makefile  README.md  concat.sh  design_doc.md  desing_doc.md  files.txt  main.cpp  out.txt  standalone.cpp  tree_chars.txt
.github/workflows/: cmake-multi-platform.yml
benchmarks/: hashmap_bench.cpp
checker/: checker.cpp  checker.h
codegen/: generator.cpp  generator.h
common/: ast.h  base_classes.cpp  base_classes.h  declarations.h  expression.h  literals.h  module.cpp  module.h  parsed_types.h  scope.h  statement.h  token.h  types.cpp  types.h  util.h
compiler/: compiler.cpp  compiler.h
examples/: CMakeLists.txt  main.cpp  script
lang/: example.st  import.st  lexer_example.st  simple.st  simple_func.st
lexer/: lexer.cpp  lexer.h
parser/: parser.cpp  parser.h
src/: main.cpp
src/checker/: checker.cpp  checker.h  module.cpp  module.h  program.h  statement.h  sym_table.cpp  sym_table.h  traits.h  type_checker.cpp  type_checker.h  type_resolver.cpp  type_resolver.h
src/lexer/: lexer.cpp  lexer.h
src/lexer2/: lexer.cpp  lexer.h
src/parser/: declaration.h  expression.cpp  expression.h  parser.cpp  parser.h  statement.h
src/parser2/: parser.cpp  parser.h
src/types/: ids.h  operators.h  statement.h  token.cpp  token.h
src/util/: arena.h  error_handler.cpp  error_handler.h  hashmap.h  util.cpp  util.h  variant.h
src/v2/: .clang-format  CMakeLists.txt  main.cpp  run_tests.sh
src/v2/checker/: checker.cpp  checker.h
src/v2/codegen/: generator.cpp  generator.h
src/v2/common/: ast.h  declarations.h  expression.h  file.h  literals.h  module.h  scope.h  statement.h  token.h  types.h  util.h
src/v2/compiler/: compiler.cpp  compiler.h
src/v2/lexer/: lexer.cpp  lexer.h
src/v2/parser/: parser.cpp  parser.h
src/v2/tests/: checker_test.cpp  generator_test.cpp  lexer_test.cpp  parser_test.cpp
src/v2/tests/functional/: functional_tests.cpp
src/v2/tests/functional/data/: address_of_rvalue_fail  always_reachable_after_loop_fail  assign_to_undeclared_fail  assignment  func_param_shadowing_fail  function_call_converts_to_cast  function_call_converts_to_cast_expected  function_calls  function_calls_expected  function_def  function_def_expected  if_no_return_statement2_fail  if_statement_simple_expected  invalid_op_bitwise_or_fail  loop_basic  loop_basic_expected  loop_invalid_condition_type_fail  parameterized_functions  parameterized_functions_expected  pointers  return_after_break_fail  return_after_continue_fail  semicolons_in_global_scope  semicolons_in_global_scope_expected  use_before_declaration  use_before_declaration_expected  variables_wrong_init_type_fail
tests/: checker_test.cpp  common.cpp  common.h  expression_test.cpp  expression_test.h  generator_test.cpp  hashmap_test.cpp  lexer_test.cpp  module_test.cpp  parser_test.cpp  parser_tests.cpp  pn_parser.cpp  pn_parser.h  rpn_parser.cpp  rpn_parser.h  vm_test.cpp  vm_tests
tests/functional/: functional_tests.cpp
tests/functional/data/: array_cast_fail  array_index_out_of_bounds_fail  array_indexing  array_indexing_expected  arrays  arrays_expected  assignment_expected  assing_to_rvalue_array_fail  boolean_ops  boolean_ops_expected  casts_folding  casts_folding_expected  constant_folding_expected  division_by_zero_constant_folding_floats_fail  division_by_zero_constant_folding_integers_fail  division_by_zero_floats_fail  division_by_zero_integers_fail  float_ops_expected  function_call_converts_to_cast  function_call_converts_to_cast_expected  function_calls_expected  function_def_expected  if_no_return_statement_fail  if_statement_nested_expected  if_statement_return  if_statement_return_expected  if_statement_simple_expected  integer_ops_expected  invalid_op_bitwise_and_fail  invalid_op_dereference_fail  loop_basic_expected  loop_reachability2_fail  loop_reachability_fail  loop_reachability_nested_fail  missing_return_fail  non_constexpr_global_initializer_fail  parameterized_functions_expected  pointers  pointers_expected  semicolons_in_global_scope  (+7 more)
tests/generator_test_data/: access_slice_data_fail  always_reachable_after_loop_fail  append  array_cast_fail  array_indexing  array_properties  arrays  assign_array_len_fail  assign_in_expression_fail  assign_slice_cap_fail  assign_slice_len_fail  assign_to_rvalue_fail  assignment  assing_to_rvalue_array_fail  branches  constant_folding  division_by_zero_constant_folding_floats_fail  division_by_zero_constant_folding_integers_fail  float_ops  func_param_shadowing_fail  function_calls  global_vars  if_no_return_statement2_fail  if_no_return_statement_fail  if_statement_nested  if_statement_return  if_statement_simple  integer_ops  loop_basic  loop_reachability2_fail  loop_reachability_fail  loop_reachability_nested_fail  main_return_type_fail  member_access  missing_return_fail  pointers  return  return_after_break_fail  return_after_continue_fail  semicolons_in_global_scope  (+7 more)
tests/test_data/: alias_decl  complex_types  func_decl  if_smt  loops  struct_decl  var_decl
tests/test_data_fail/: redeclaration
vm/: instructions.cpp  instructions.h  vm.cpp  vm.h
vm/assembler/: assembler.cpp  assembler.h
